--- a/solution/css/style.css
+++ b/solution/css/style.css
@@ -115,6 +115,11 @@ body {
 #gtco-main-nav form a.btn-outline-dark {
   border-color: #fff;
   background-color: transparent;
+  transition: all 0.3s ease;
+}
+#gtco-main-nav form a.btn-outline-dark:hover {
+  border-color: #000;
+  color: #000;
 }
 @media (max-width: 991px) {
   #gtco-main-nav form a.btn-outline-dark {
@@ -214,6 +219,7 @@ body {
   text-transform: uppercase;
   padding-right: 5px;
   text-decoration: none !important;
+  transition: 0.3s;
 }
 .gtco-banner-area a .fa, .gtco-feature a .fa, .gtco-features a .fa, .gtco-news .owl-carousel .card a .fa, #gtco-footer .submit-button .fa {
   background: #fff;
@@ -225,6 +231,16 @@ body {
   text-align: center;
   padding-top: 5px;
   margin-left: 15px;
+  transition: 0.3s;
+}
+
+.gtco-banner-area a:hover, .gtco-feature a:hover, .gtco-features a:hover, .gtco-news .owl-carousel .card a:hover, #gtco-footer .submit-button:hover {
+  color: #000;
+  border-color: #000;
+}
+
+.gtco-banner-area a:hover .fa, .gtco-feature a:hover .fa, .gtco-features a:hover .fa, .gtco-news .owl-carousel .card a:hover .fa, #gtco-footer .submit-button:hover .fa {
+  color: #000;
 }
 
 .gtco-feature h2, .gtco-features h2 {
@@ -801,7 +817,7 @@ body {
 
 
 .footer-distributed{
-	background:  #c6c5c5;
+	background:  #37474f;
 	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
 	box-sizing: border-box;
 	width: 100%;
@@ -873,7 +889,7 @@ body {
 	border-radius: 50%;
 	text-align: center;
 	line-height: 42px;
-	margin: 10px 12px 10px 0px;
+	margin: 10px 10px 8px 0px;
 	vertical-align: middle;
 }
 
@@ -885,13 +901,18 @@ body {
 .footer-distributed .footer-center p{
 	display: inline-block;
 	color: #ffffff;
-  font-weight:400;
+  
+  font-weight: 400;
 	vertical-align: middle;
 	margin:0;
 }
 
-.footer-distributed .footer-center a{
-	margin: 50px 0px;
+.footer-distributed .footer-center .contact{
+  margin: -0px 0px 0px 0px;
+}
+
+.footer-distributed .footer-center .ocf{
+	margin: 20px 0px 0px 0px;
 }
 
 .footer-distributed .footer-center p span{
@@ -903,7 +924,7 @@ body {
 
 .footer-distributed .footer-center p a{
 	/*color:  lightseagreen;*/
-  color: #1d3ede;
+  color: #ffffff;
 	text-decoration: none;;
 }
 
@@ -938,7 +959,7 @@ body {
 .footer-distributed .footer-company-about span{
 	display: block;
 	color:  #ffffff;
-	font-size: 14px;
+	font-size: 15px;
 	/*font-weight: bold;*/
 	margin-bottom: 20px;
 }
@@ -963,6 +984,28 @@ body {
 	margin-right: 3px;
 	margin-bottom: 5px;
 }
+
+.underline {
+  position: relative;
+  display: inline-block;
+}
+
+.underline::before {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 2px;
+  bottom: -3px;
+  left: 50%;
+  background-color: black;
+  transition: 0.3s;
+}
+
+.underline:hover::before {
+  width: 80%;
+  left: 10%;
+}
+
 
 /* If you don't want the footer to be responsive, remove these media queries */
 
