--- a/solution/css/timeline.css
+++ b/solution/css/timeline.css
@@ -17,7 +17,7 @@ list-style: none;
 padding: 0;
 }
 
-.container{
+.containers{
 display: flex;
 justify-content: center;
 align-items: center;
@@ -59,7 +59,7 @@ margin-top: 2rem;
 border-radius: 12px;
 position: relative;
 }
-li{
+.lines{
 padding-bottom: 1.5rem;
 border-left: 1px solid #abaaed;
 position: relative;
