--- a/solution/css/style.css
+++ b/solution/css/style.css
@@ -817,7 +817,8 @@ body {
 
 
 .footer-distributed{
-	background:  #37474f;
+	background:  #06c4f99f;
+  opacity: 1;
 	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
 	box-sizing: border-box;
 	width: 100%;
