--- a/solution/css/bootstrap.css
+++ b/solution/css/bootstrap.css
@@ -428,9 +428,14 @@ hr {
   border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
 
+.a16{
+  font-size: 100%;
+  color: #666666
+}
+
 small,
 .small {
-  font-size: 16pt;
+  font-size: 100%;
   font-weight: 400;
 }
 
