--- a/solution/css/timeline.css
+++ b/solution/css/timeline.css
@@ -52,7 +52,7 @@ p1{
 font-size: 1.25rem;
 font-family: sans-serif;
 margin-left: 17rem;
-color: #fff;
+color: #2a2839;
 }
 .sessions{
 margin-top: 2rem;
