--- a/solution/css/style.css
+++ b/solution/css/style.css
@@ -817,7 +817,7 @@ body {
 
 
 .footer-distributed{
-	background:  #06c4f99f;
+	background:  #11cbff33;
   opacity: 1;
 	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
 	box-sizing: border-box;
@@ -859,7 +859,7 @@ body {
 /* Footer links */
 
 .footer-distributed .footer-links{
-	color:  #ffffff;
+	color:  #000000;
 	margin: 20px 0 12px;
 	padding: 0;
 }
@@ -909,7 +909,7 @@ body {
 
 .footer-distributed .footer-center p{
 	display: inline-block;
-	color: #ffffff;
+	color: #33383b;
   
   font-weight: 400;
 	vertical-align: middle;
@@ -934,7 +934,7 @@ body {
 
 .footer-distributed .footer-center p a{
 	/*color:  lightseagreen;*/
-  color: #ffffff;
+  color: #33383b;
 	text-decoration: none;;
 }
 
@@ -943,7 +943,7 @@ body {
   font-weight:300;
   font-size: 20px;
   left: 0;
-  color: #fff;
+  color: #33383b;
   display: inline-block;
   padding-right: 5px;
 }
@@ -968,8 +968,8 @@ body {
 
 .footer-distributed .footer-company-about span{
 	display: block;
-	color:  #ffffff;
-	font-size: 15.5px;
+	color:  #33383b;
+	font-size: 16px;
 	/*font-weight: bold;*/
 	margin-bottom: 20px;
 }
