--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ body {
 #gtco-main-nav .navbar-nav li a {
   font-family: "OpenSans-Regular";
   font-size: 18px;
-  color: #000000;
+  color: #fdfbfb;
   padding: 5px 15px !important;
   text-transform: uppercase;
 }
