--- a/css/timeline.css
+++ b/css/timeline.css
@@ -45,13 +45,14 @@ h13{
   font-family: sans-serif;
   margin-top: 1.5rem;
   margin-bottom: 1.1rem;
-  margin-left: 30rem;
   color: #2a2839;
 }
 p1{
 font-size: 1.25rem;
 font-family: sans-serif;
-margin-left: 17rem;
+display: flex;
+justify-content: center;
+align-items: center;
 color: #2a2839;
 }
 .sessions{
@@ -107,198 +108,9 @@ margin-top:0.4rem;
 }
 }
 
-#gtco-main-nav {
-  padding: 20px 0;
-}
-#gtco-main-nav .navbar-brand {
-  font-size: 36px;
-  font-family: "Lato-Black";
-  text-transform: uppercase;
-  background: -webkit-linear-gradient(left, #1d3ede, #01e6f8);
-  background: -ms-linear-gradient(left, #1d3ede, #01e6f8);
-  background: -moz-linear-gradient(left, #1d3ede, #01e6f8);
-  background: -o-linear-gradient(left, #1d3ede, #01e6f8);
-  -webkit-background-clip: text;
-  -ms-background-clip: text;
-  -o-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  -ms-text-fill-color: transparent;
-  -o-text-fill-color: transparent;
-}
-#gtco-main-nav .bar1, #gtco-main-nav .bar2, #gtco-main-nav .bar3 {
-  width: 25px;
-  height: 2px;
-  background-color: #fff;
-  margin: 5px 0;
-  transition: 0.4s;
-  display: block;
-  position: relative;
-}
-#gtco-main-nav .change .bar1 {
-  -webkit-transform: rotate(-42deg) translate(-2px, 6px);
-  transform: rotate(-42deg) translate(-2px, 6px);
-}
-#gtco-main-nav .change .bar2 {
-  opacity: 0;
-}
-#gtco-main-nav .change .bar3 {
-  -webkit-transform: rotate(46deg) translate(-4px, -8px);
-  transform: rotate(46deg) translate(-4px, -8px);
-}
-#gtco-main-nav .navbar-nav li a {
-  font-family: "OpenSans-Regular";
-  font-size: 18px;
-  color: #000000;
-  padding: 5px 15px !important;
-  text-transform: uppercase;
-}
-#gtco-main-nav form a {
-  font-family: "OpenSans-Semibold";
-  font-size: 18px;
-  color: #fff;
-  padding: 5px 25px;
-  border-radius: 20px;
-  border-width: 2px;
-}
-#gtco-main-nav form a.btn-info {
-  background: #01e6f8;
-  border-color: #01e6f8;
-}
-#gtco-main-nav form a.btn-outline-dark {
-  border-color: #fff;
-  background-color: transparent;
-  transition: all 0.3s ease;
-}
-#gtco-main-nav form a.btn-outline-dark:hover {
-  border-color: #000;
-  color: #000;
-}
-@media (max-width: 991px) {
-  #gtco-main-nav form a.btn-outline-dark {
-    border-color: #1d3ede;
-    color: #1d3ede;
-  }
-}
-#gtco-main-nav::after {
-  position: absolute;
-  content: "";
-  height: 600px;
-  width: 900px;
-  background-image: -webkit-linear-gradient(-220deg, #1d3ede, #01e6f8);
-  background-image: -moz-linear-gradient(-220deg, #1d3ede, #01e6f8);
-  background-image: -ms-linear-gradient(-220deg, #1d3ede, #01e6f8);
-  background-image: -o-linear-gradient(-220deg, #1d3ede, #01e6f8);
-  background-image: linear-gradient(-220deg, #1d3ede, #01e6f8);
-  left: 49.5%;
-  top: -50px;
-  z-index: -1;
-  border-radius: 50% 0 50% 50%;
-}
-@media (max-width: 1400px) {
-  #gtco-main-nav::after {
-    height: 550px;
-    width: 800px;
-  }
-}
-@media (max-width: 1199px) {
-  #gtco-main-nav::after {
-    width: 700px;
-  }
-}
-@media (max-width: 991px) {
-  #gtco-main-nav::after {
-    width: 55%;
-    left: auto;
-    right: 0;
-  }
-}
-@media (max-width: 600px) {
-  #gtco-main-nav::after {
-    width: 100%;
-    height: 400px;
-  }
-}
-#gtco-main-nav::before {
-  position: absolute;
-  content: "";
-  height: 590px;
-  width: 930px;
-  background-image: -webkit-linear-gradient(to right, #e8eefc, #e6fafe);
-  background-image: -moz-linear-gradient(to right, #e8eefc, #e6fafe);
-  background-image: -ms-linear-gradient(to right, #e8eefc, #e6fafe);
-  background-image: -o-linear-gradient(to right, #e8eefc, #e6fafe);
-  background-image: linear-gradient(to right, #e8eefc, #e6fafe);
-  left: 47.5%;
-  top: -25px;
-  z-index: -1;
-  border-radius: 50% 0 50% 50%;
-}
-@media (max-width: 1400px) {
-  #gtco-main-nav::before {
-    height: 540px;
-    width: 810px;
-  }
-}
-@media (max-width: 1199px) {
-  #gtco-main-nav::before {
-    width: 710px;
-  }
-}
-@media (max-width: 991px) {
-  #gtco-main-nav::before {
-    width: 55%;
-    left: auto;
-    right: 0;
-  }
-}
-@media (max-width: 600px) {
-  #gtco-main-nav::before {
-    width: 100%;
-    height: 390px;
-  }
+li div{
+  display: flex;
+  justify-content: center;
+    align-items: center;
 }
 
-.gtco-news .owl-carousel .owl-nav {
-  display: block !important;
-  position: absolute;
-  top: 25%;
-  width: 100%;
-}
-@media (max-width: 600px) {
-  .gtco-news .owl-carousel .owl-nav {
-    display: none !important;
-  }
-}
-.gtco-news .owl-carousel .owl-nav .owl-prev, .gtco-news .owl-carousel .owl-nav .owl-next {
-  font-size: 120px;
-  color: #666666;
-  position: absolute;
-}
-.gtco-news .owl-carousel .owl-nav .owl-prev {
-  left: -50px;
-}
-.gtco-news .owl-carousel .owl-nav .owl-next {
-  right: -50px;
-}
-
-#gtco-footer .company-nav, #gtco-footer .services-nav {
-  font-family: "OpenSans-Regular";
-  font-size: 20px;
-}
-#gtco-footer .company-nav a, #gtco-footer .services-nav a {
-  color: #666666;
-  margin: 0;
-  padding: 0;
-}
-#gtco-footer .follow-us-nav a {
-  padding: 0 10px;
-  color: #666666;
-}
-@media (max-width: 385px) {
-  #gtco-footer .follow-us-nav a {
-    padding-right: 0;
-  }
-}
-#gtco-footer .follow-us-nav a .fa {
-  font-size: 24px;
-}
