--- a/css/contact.css
+++ b/css/contact.css
@@ -34,6 +34,7 @@
     flex: 1;
     max-width: 500px;
     max-height: 250px;
+    min-width: 350px;
   }
   
   /* On mouse-over, add a deeper shadow */
