--- a/css/timeline.css
+++ b/css/timeline.css
@@ -22,7 +22,8 @@ display: flex;
 justify-content: center;
 align-items: center;
 padding: 0 1rem;
-background: linear-gradient(45deg, #209cff, #68e0cf);
+/*background: linear-gradient(45deg, #209cff, #68e0cf);*/
+background: linear-gradient(45deg, #209cff, #72dfed);
 padding: 3rem 0;
 }
 .wrapper{
@@ -46,7 +47,7 @@ h13{
     align-items: center;
   font-size: 4rem;
   font-family: sans-serif;
-  margin-top: 1.5rem;
+  margin-top: 0rem;
   margin-bottom: 1.1rem;
   color: #2a2839;
 }
@@ -56,6 +57,7 @@ font-family: sans-serif;
 display: flex;
 justify-content: center;
 align-items: center;
+text-align: center;
 color: #2a2839;
 }
 .sessions{
