--- a/css/timeline.css
+++ b/css/timeline.css
@@ -54,12 +54,13 @@ h13{
 p1{
 font-size: 1.25rem;
 font-family: sans-serif;
-display: flex;
+display: block;
 justify-content: center;
 align-items: center;
 text-align: center;
 color: #2a2839;
 }
+
 .sessions{
 margin-top: 2rem;
 border-radius: 12px;
