--- a/css/contact.css
+++ b/css/contact.css
@@ -80,7 +80,10 @@
     font-size: 1.25rem;
     font-family: sans-serif;
     color: #2a2839;
-    padding: 0px 10% 55px;
+    max-width: 1100px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0px 5% 55px;
   }
 
   @media (max-width: 768px) {
