--- a/css/contact.css
+++ b/css/contact.css
@@ -56,7 +56,7 @@
     /* display: flex; */
     justify-content: center;
     align-items: center;
-    padding: 5rem 1rem;
+    padding: 3.6rem 0rem;
     /*background: linear-gradient(45deg, #209cff, #68e0cf);*/
     background: linear-gradient(45deg, #209cff, #72dfed);
     }
@@ -95,8 +95,10 @@
 
   @media (max-width: 780px) {
     #contact-text-section {
-      display: block;
+      display: grid;
       margin-bottom: 0px;
+      justify-content: center;
+    align-items: center;
     }
     .cards {
       width: 100%;
