--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@
 }
 p {
   font-family: "OpenSans-Regular";
-  color: #666666;
+  color: #ffffff;
   font-size: 18px;
 }
 
@@ -599,7 +599,7 @@ body {
 }
 .gtco-testimonials .card h5 span {
   font-size: 18px;
-  color: #666666;
+  color: #ffffff;
   font-family: "OpenSans-Regular";
 }
 .gtco-testimonials .card p {
@@ -773,13 +773,13 @@ body {
   font-size: 20px;
 }
 #gtco-footer .company-nav a, #gtco-footer .services-nav a {
-  color: #666666;
+  color: #ffffff;
   margin: 0;
   padding: 0;
 }
 #gtco-footer .follow-us-nav a {
   padding: 0 10px;
-  color: #666666;
+  color: #ffffff;
 }
 @media (max-width: 385px) {
   #gtco-footer .follow-us-nav a {
@@ -817,7 +817,7 @@ body {
 
 
 .footer-distributed{
-	background:  #11cbff33;
+	background:  #000;
   opacity: 1;
 	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
 	box-sizing: border-box;
@@ -859,7 +859,7 @@ body {
 /* Footer links */
 
 .footer-distributed .footer-links{
-	color:  #000000;
+	color:  #ffffff;
 	margin: 20px 0 12px;
 	padding: 0;
 }
@@ -873,7 +873,7 @@ body {
 }
 
 .footer-distributed .footer-company-name{
-	color:  #222;
+	color:  rgb(255, 255, 255);
 	font-size: 14px;
 	font-weight: normal;
 	margin: 0;
@@ -909,7 +909,7 @@ body {
 
 .footer-distributed .footer-center p{
 	display: inline-block;
-	color: #33383b;
+	color: #ffffff;
   
   font-weight: 400;
 	vertical-align: middle;
@@ -934,7 +934,7 @@ body {
 
 .footer-distributed .footer-center p a{
 	/*color:  lightseagreen;*/
-  color: #33383b;
+  color: #ffffff;
 	text-decoration: none;;
 }
 
@@ -943,7 +943,7 @@ body {
   font-weight:300;
   font-size: 20px;
   left: 0;
-  color: #33383b;
+  color: #ffffff;
   display: inline-block;
   padding-right: 5px;
 }
@@ -968,7 +968,7 @@ body {
 
 .footer-distributed .footer-company-about span{
 	display: block;
-	color:  #33383b;
+	color:  #ffffff;
 	font-size: 16px;
 	/*font-weight: bold;*/
 	margin-bottom: 20px;
@@ -1007,7 +1007,7 @@ body {
   height: 2px;
   bottom: -3px;
   left: 50%;
-  background-color: black;
+  background-color: rgb(255, 255, 255);
   transition: 0.3s;
 }
 
