--- a/css/timeline.css
+++ b/css/timeline.css
@@ -13,37 +13,38 @@
 
 
 ul, li{
-list-style: none;
-padding: 0;
+  list-style: none;
+  padding: 0;
 }
 
 .containers{
-display: flex;
-justify-content: center;
-align-items: center;
-/*background: linear-gradient(45deg, #209cff, #68e0cf);*/
-background: linear-gradient(45deg, #209cff, #72dfed);
-padding: 3rem 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /*background: linear-gradient(45deg, #209cff, #68e0cf);*/
+  background: linear-gradient(45deg, #209cff, #72dfed);
+  padding: 3rem 0;
 }
 .wrapper{
-margin-top: 2rem;
-background: #eaf6ff;
-padding: 2.3rem;
-border-radius: 15px;
+  max-width: 1200px;
+  margin-top: 2rem;
+  background: #eaf6ff;
+  padding: 2.3rem;
+  border-radius: 15px;
 }
 h11{
-font-size: 1.5rem;
-font-family: sans-serif;
+  font-size: 1.5rem;
+  font-family: sans-serif;
 }
 h12{
-font-size: 1.25rem;
-font-family: sans-serif;
-margin-top: .2rem;
+  font-size: 1.25rem;
+  font-family: sans-serif;
+  margin-top: .2rem;
 }
 h13{
   display: flex;
-    justify-content: center;
-    align-items: center;
+  justify-content: center;
+  align-items: center;
   font-size: 4rem;
   font-family: sans-serif;
   margin-top: 0rem;
@@ -68,12 +69,12 @@ border-radius: 12px;
 position: relative;
 }
 .lines{
-padding-bottom: 1.5rem;
-border-left: 1px solid #abaaed;
-position: relative;
-padding-left: 20px;
-margin-left: 10px;
-margin-right: 10px;
+  padding-bottom: 1.5rem;
+  border-left: 1px solid #abaaed;
+  position: relative;
+  padding-left: 20px;
+  margin-left: 10px;
+  margin-right: 10px;
 &:last-child{
   border: 0px;
   padding-bottom: 0;
@@ -106,9 +107,9 @@ font-weight: bold;
 
 }
 p{
-    font-family: sans-serif;
-line-height: 1.5;
-margin-top:0.4rem;
+  font-family: sans-serif;
+  line-height: 1.5;
+  margin-top:0.4rem;
 @include mobile-only{
   font-size: .9rem;
 }
